# ember

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  server.rs
src/command/: command.rs  dispatcher.rs  mod.rs
src/config/: client.rs
src/database/: core.rs
src/rdb/: reader.rs  writer.rs
src/resp/: parser.rs  types.rs
src/utils/: mod.rs
tests/: command_parsing.rs  database.rs  resp_parser.rs  resp_types.rs
tests/common/: mod.rs
