[package]
name = "ember"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.5.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync",
    "time",
] }
log = "0.4.29"
env_logger = "0.11.9"
bytes = "1.11.1"
rand = "0.10.0"

dashmap = "6"

[dev-dependencies]
# test-util unlocks tokio::time::pause() / advance() for deterministic time-based tests,
# following the same pattern used by tokio-rs/mini-redis.
tokio = { version = "1", features = ["test-util", "macros", "rt"] }
